Added UTF-8 meta Content-Type header

--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
 <link rel="stylesheet" href="blueprint/screen.css" type="text/css" media="screen, projection"> 
-<link rel="stylesheet" href="blueprint/print.css" type="text/css" media="print">    
+<link rel="stylesheet" href="blueprint/print.css" type="text/css" media="print">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <!--[if lt IE 8]><link rel="stylesheet" href="/blueprint/ie.css" type="text/css" media="screen, projection"><![endif]-->
 <title>dongsa.net</title>
 <meta name="verify-v1" content="nfSbiOgPUnEWsQ8h5APnRPOxK0HWpZtiMMHZZ+oaIZ4=" >
