Added a "conjugate" button

--- a/html/index.html
+++ b/html/index.html
@@ -42,7 +42,8 @@ $(document).ready(function() {
 </head>
 <body>
 <form method="get" onsubmit="display_conjugation($('#infinitive').val()); return false;">
-<label for="infinitive">infinitive</label><input name="infinitive" id="infinitive">
+<label for="infinitive">infinitive</label><input name="infinitive" id="infinitive" />
+<input type="submit" value="conjugate" />
 </form>
 <div id="output">
 </div>
