--- a/html/index.html
+++ b/html/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE HTML>
 <html manifest="dongsa.manifest">
 <head>
-<link rel="stylesheet" href="blueprint/screen.css" type="text/css" media="screen, projection">
-<link rel="stylesheet" href="blueprint/print.css" type="text/css" media="print">
+<link rel="stylesheet" href="css/dongsa.css" type="text/css">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <!--[if lt IE 8]><link rel="stylesheet" href="/blueprint/ie.css" type="text/css" media="screen, projection"><![endif]-->
 <title>dongsa.net</title>
@@ -38,7 +37,7 @@ $(document).ready(function() {
 </head>
 <body>
 <form method="get" onsubmit="update($('#infinitive').val()); return false;">
-<label for="infinitive">infinitive</label><input name="infinitive" id="infinitive" />
+<label for="infinitive">infinitive</label><input size="7" name="infinitive" id="infinitive" />
 <input type="submit" value="conjugate" />
 </form>
 <div id="output">
