See #3 - added a simple Hangeul keyboard for people who don't have a Korean input system

--- a/html/index.html
+++ b/html/index.html
@@ -7,9 +7,11 @@
 <title>dongsa.net</title>
 <meta name="verify-v1" content="nfSbiOgPUnEWsQ8h5APnRPOxK0HWpZtiMMHZZ+oaIZ4=" >
 <script type="text/javascript" src="scripts/jquery-1.4.2.min.js"></script>
+<script type="text/javascript" src="scripts/johab.js" charset="utf-8"></script>
 <script type="text/javascript" src="korean/hangeul.js" charset="utf-8"></script>
 <script type="text/javascript" src="korean/pronunciation.js" charset="utf-8"></script>
 <script type="text/javascript" src="korean/conjugator.js" charset="utf-8"></script>
+<script type="text/javascript" src="korean/hangeul-keyboard.js" charset="utf-8"></script>
 <script type="text/javascript">
 //<![CDATA[
 function update(infinitive, regular) {
@@ -36,8 +38,12 @@ if (!infinitive || typeof(infinitive) == 'undefined' || infinitive == 'undefined
 }
 
 $(document).ready(function() {
+    $('#show-keyboard').click(function() {
+        $('#keyboard').slideToggle();
+    });
     $('#infinitive').val(infinitive);
     update(infinitive);
+    display_keyboard('#keyboard');
 });
 
 //]]>
@@ -46,8 +52,10 @@ $(document).ready(function() {
 <body>
 <form method="get" onsubmit="update($('#infinitive').val(), false); return false;">
 <label for="infinitive">infinitive</label><input size="7" name="infinitive" id="infinitive" />
-<input type="submit" value="conjugate" />
+<input type="submit" value="conjugate" /> <button id="show-keyboard">keyboard</button>
 </form>
+<div id="keyboard">
+</div>
 <div id="output">
 </div>
 </body>
