Strip whitespace so conjugations aren't borked if there is trailing whitespace

--- a/html/index.html
+++ b/html/index.html
@@ -16,6 +16,7 @@
 <script type="text/javascript">
 //<![CDATA[
 function update(infinitive, regular) {
+    infinitive = infinitive.trim();
     conjugator.display_conjugations(infinitive, regular, function(output) {
         $('#output').html(output);
         $('.show-reasons').click(function() {
